--- a/practice/theme-park/forest.html
+++ b/practice/theme-park/forest.html
@@ -28,13 +28,13 @@
     
 <!--RETURN TO HOMEPAGE-->
     <hr>
-    <a href="initial.html">Return to the Homepage</a>
+    <a href="index.html">Return to the Homepage</a>
 <!--FOOTER-->
     <hr>
     <p>Contact Us:</p>
     <p>Email: wanderingsisters@gmail.com
     <br>Number: 0999203044113
-    <br>Director: Patrusheva Violetta
+    <br>Director: Patrusheva Violetta, Zimina Alisa
     </p>
 </body>
 </html>
